# smem

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
examples/: CMakeLists.txt  ipc-client.cpp  ipc-server.cpp  simple.cpp
include/smem/: smem.hpp
include/smem/impl/: smem.cpp
tests/: CMakeLists.txt  test.cpp
